# vinix

./: .graphqlrc.yaml  Cargo.toml  flake.nix  manifest.txt  pkgs.nix  vimPlugins.toml
src/: config.rs  github.rs  main.rs  manifest.rs  nix.rs
src/github/: get_latest_tarball.graphql
