[package]
name = "vinix"
version = "0.1.0"
edition = "2021"

[dependencies]
alejandra = { git = "https://github.com/kamadorueda/alejandra", rev = "3.0.0" }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
graphql_client = { version = "0.12.0", features = ["reqwest"] }
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }

# required because alejandra specifies rnix version to 0
rnix = "0.10.2"
